# robot_emblem

./: README.md  frames_2025-09-20_16.24.37.gv  frames_2025-09-20_17.09.03.gv  frames_2025-09-23_21.20.26.gv
install/: local_setup.sh  setup.sh
install/robot_emblem/lib/robot_emblem/: map_loader_node  map_node  unit_manager_node
install/robot_emblem/share/ament_index/resource_index/package_run_dependencies/: robot_emblem
install/robot_emblem/share/robot_emblem/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_emblem/share/robot_emblem/cmake/: robot_emblemConfig-version.cmake  robot_emblemConfig.cmake
install/robot_emblem/share/robot_emblem/environment/: ament_prefix_path.dsv  path.dsv
install/robot_emblem/share/robot_emblem/launch/: demo.launch.py
install/robot_emblem/share/robot_emblem/maps/: demo_map.yaml
install/robot_emblem_description/share/robot_emblem_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_emblem_description/share/robot_emblem_description/urdf/: enemy.xacro
log/: latest_build
src/robot_emblem/: CMakeLists.txt  package.xml
src/robot_emblem/include/robot_emblem/core/: game.hpp
src/robot_emblem/launch/: demo.launch.py
src/robot_emblem/src/core/: map.cpp  map_loader_node.cpp  unit_manager_node.cpp
src/robot_emblem_description/: CMakeLists.txt
src/robot_emblem_description/urdf/: enemy.urdf.xacro  fe_unit.urdf.xacro
(+1 files in other folders)
